--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   cloud_firestore: ^6.1.1
   firebase_core: ^4.3.0
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
